# CDH_Skills

./: .gitignore  README.md  climate_agent_colab_gemini.ipynb  pyproject.toml  skills-lock.json
.claude/: mcp_config.json  settings.local.json
.claude/skills/climate-data-download/: SKILL.md
.claude/skills/gcf-pipeline/: skill.md
.claude/skills/geospatial-cube-processor/: SKILL.md
.claude/skills/geospatial-cube-processor/evals/: evals.json
.claude/skills/notebook-plots/: SKILL.md
.claude/skills/python-docs-expert/references/: project-conventions.md
.claude/skills/python-docs-expert/scripts/: generate_docstring_template.py
.gemini/skills/notebook-plots/evals/: evals.json
.gemini/skills/python-docs-expert/: SKILL.md
.gemini/skills/python-docs-expert/references/: numpy-style-guide.md
cdh/: __init__.py  _api.py  conventions.py  mcp_server.py
cdh/config/: schemas.py
cdh/ingestion/: __init__.py  agera5.py  boundaries.py  chirps.py  chirts.py  files_manager.py  gis_functions.py  nasa_power.py  utils.py
cdh/spatial/: __init__.py  raster_ops.py
cdh/summarize/: __init__.py  spatial.py  temporal.py
cdh/transform/: __init__.py  cog_export.py  cube_builder.py
skills/climate-data-download/: SKILL.md
skills/climate-data-download/evals/: evals.json
skills/gcf-pipeline/: skill.md
skills/gcf-pipeline/evals/: evals.json
