[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cdh"
version = "0.1.0"
description = "Climate Data Hub — retrieval and processing for CHIRPS, CHIRTS, AgERA5, NASA POWER"
authors = [{ name = "Andres Aguilar", email = "andres.aguilar@cgiar.org" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "xarray>=2023.1",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
    "tqdm>=4.65",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "shapely>=2.0",
    "pyproj>=3.5",
    "netcdf4>=1.6",
]

[project.optional-dependencies]
agera5 = ["cdsapi>=0.6"]
mcp = ["mcp[cli]>=1.0"]
full = ["cdsapi>=0.6", "pycountry>=22.3", "dask[array]>=2023.1", "mcp[cli]>=1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cdh*"]
